odd or even on html page

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -7,9 +7,9 @@
 	    <H1>
 		    Number: {{n}} is 
 		    {% if n % 2 == 0 %}
-		    	<span>even</span>
+		    	<SPAN>even</SPAN>
 		    {% else %}
-		    	<span>odd</span>
+		    	<SPAN>odd</SPAN>
 			{% endif %}
 	    </H1>
     </BODY>
