--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,13 +4,10 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-	    <H1>
-		    Number: {{n}} is 
-		    {% if n % 2 == 0 %}
-		    	<SPAN>even</SPAN>
-		    {% else %}
-		    	<SPAN>odd</SPAN>
-			{% endif %}
-	    </H1>
+	    {% if n % 2 == 0 %}
+	    	<H1>Number: {{ n }} is even</H1>
+	    {% else %}
+	    	<H1>Number: {{ n }} is odd</H1>
+	    {% endif %}
     </BODY>
 </HTML>
