--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,24 +4,23 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-	{% if state is mapping %}
+        {% if state is defined and state is mapping %}
         <H1>States</H1>
         <UL>
-	{% for s in s.values()|sort(attribute="name")  %}
-		<LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
-	{% endfor %}
-	</UL>
-	{% elif is undefined  %}
-	<H1>State: {{ state.name }}</H1>
-	<H3>Cities:</H3>
-	<UL>
-        {% for city in state.cities|sort(attribute="name")  %}
-                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-        {% endfor %}
+            {% for s in state.values()|sort(attribute="name") %}
+                <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+            {% endfor %}
         </UL>
-	{% else %}
-	<H1>Not Found!</H1>
-	{% endif %}
+        {% elif state is defined and state is not mapping %}
+        <H1>State: {{ state.name }}</H1>
+        <H3>Cities:</H3>
+        <UL>
+            {% for city in state.cities|sort(attribute="name") %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+            {% endfor %}
+        </UL>
+        {% else %}
+        <H1>Not Found!</H1>
+        {% endif %}
     </BODY>
 </HTML>
-
