--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -69,6 +69,10 @@ ul {
         list-style-type: none;
 	position: relative;
 }
+.city-name {
+	margin-left: -25px;
+}
+
 h2 {
         font-size: 16px;
 }
